Make displayName field more intuitive by collapsing it when focussed and empty. (fixes #319)

--- a/public/styles/styles-main.css
+++ b/public/styles/styles-main.css
@@ -557,6 +557,10 @@ footer .logo {
     position: relative;
 }
 
+#display-name:focus::before {
+    display: none;
+}
+
 html:not([dir="rtl"]) #display-name,
 html:not([dir="rtl"]) .edit-pen {
     margin-left: -1rem;
